--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@ function render() {
         A STRANGE DAY
         <span>IN THE BIRTHDAY MEMORY WAREHOUSE<br>OF MR. CHERGUI A.</span>
       </div>
-      <button onclick="next()">Let’s see what’s inside</button>
+      <button class="story-btn" onclick="next()">
+        Let’s see what’s inside
+      </button>
     `;
   }
 
