--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ function render() {
         كاليفورنيا، بينما يراقب الساعة أمامه باستمرار.
       </div>
       <img src="./images/ayoub1.jpg">
-      <button class="small-btn" onclick="next()">tick</button>
+      <button class="story-btn small-btn" onclick="next()">tick</button>
     `;
   }
 
