--- a/index.html
+++ b/index.html
@@ -114,7 +114,12 @@ function render() {
         كاليفورنيا، بينما يراقب الساعة أمامه باستمرار.
       </div>
       <img src="./images/ayoub1.jpg">
-      <button class="story-btn small-btn" onclick="next()">tick</button>
+      <button
+        onclick="next()"
+        style="padding: 10px 18px; font-size: 14px;"
+      >
+        tick
+      </button>
     `;
   }
 
